# metabasecli

./: .gitignore  README.md  pyproject.toml
docs/: cli-structure-proposal.md  metabase-api.md
src/metabasecli/: __init__.py  cli.py  config.py  constants.py  context.py  logging.py  output.py  utils.py
src/metabasecli/client/: __init__.py  auth.py  base.py  cards.py  collections.py  dashboards.py  databases.py  search.py
src/metabasecli/commands/: __init__.py  auth.py  cards.py  collections.py  dashboards.py  databases.py  resolve.py  search.py
src/metabasecli/models/: __init__.py  auth.py  card.py  collection.py  dashboard.py  database.py
