[project]
name = "metabasecli"
version = "0.1.0"
description = "A command-line interface for Metabase"
readme = "README.md"
authors = [
    { name = "Filip Prochazka", email = "dev@fprochazka.cz" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.15.0",
]

[project.scripts]
metabase = "metabasecli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metabasecli"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]
